--- a/default.css
+++ b/default.css
@@ -381,6 +381,23 @@ h6 { font-size: 16px;}
 }
 
 
+.social {
+	display: flex;
+	align-items: center;
+	margin: 20px 20px 20px 532px;
+	
+  }
+  
+  .social img {
+	width: 35px;
+	height: 35px;
+  }
+  
+  .social a {
+	text-decoration: none;
+	margin-right: 20px;
+  }
+
 .post-wrapper{
 	display: grid;
 	grid-template-columns: repeat(auto-fit, 320px);
